--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>spring-elasticsearch</module>
         <module>spring-mongodb</module>
         <module>spring-protobuf</module>
+        <module>spring-redis</module>
     </modules>
 
     <properties>
