--- a/spring-redis/src/main/resources/application.yml
+++ b/spring-redis/src/main/resources/application.yml
@@ -6,6 +6,22 @@ spring:
   application:
     name: spring-redis
   redis:
-    host: localhost
-    port: 6379
-    timeout: 10000
+    cluster:
+      nodes:
+        - 192.168.101.61:7000
+        - 192.168.101.61:7001
+        - 192.168.101.61:7002
+        - 192.168.101.61:7003
+        - 192.168.101.61:7004
+        - 192.168.101.61:7005
+      max-redirects: 3
+    jedis:
+      pool:
+        max-wait: -1
+        max-active: 1000
+        max-idle: 8
+        min-idle: 5
+#  redis:
+#    host: localhost
+#    port: 6379
+#    timeout: 10000
