--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>spring-mongodb</module>
         <module>spring-protobuf</module>
         <module>spring-redis</module>
+        <module>rocketMq-trans</module>
     </modules>
 
     <properties>
