--- a/rocketMq-trans/rocketmq-consumer/pom.xml
+++ b/rocketMq-trans/rocketmq-consumer/pom.xml
@@ -23,10 +23,14 @@
             <version>4.8.0</version>
         </dependency>
 
+<!--        <dependency>-->
+<!--            <groupId>com.oracle</groupId>-->
+<!--            <artifactId>ojdbc6</artifactId>-->
+<!--            <version>11.2.0.2.0</version>-->
+<!--        </dependency>-->
         <dependency>
-            <groupId>com.oracle</groupId>
-            <artifactId>ojdbc6</artifactId>
-            <version>11.2.0.2.0</version>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
         </dependency>
     </dependencies>
 </project>
