--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>spring-protobuf</module>
         <module>spring-redis</module>
         <module>spring-mybatis-plus</module>
+        <module>rocketMq-trans</module>
     </modules>
 
     <properties>
