--- a/rocketMq-trans/rocket-producer/pom.xml
+++ b/rocketMq-trans/rocket-producer/pom.xml
@@ -36,12 +36,16 @@
 <!--            <version>11.2.0.2.0</version>-->
 <!--        </dependency>-->
 
+<!--        <dependency>-->
+<!--            <groupId>com.oracle.jdbc</groupId>-->
+<!--            <artifactId>ojdbc6</artifactId>-->
+<!--            <version>11.2.0.1.0</version>-->
+<!--            <scope>system</scope>-->
+<!--            <systemPath>${basedir}/lib/oracle/ojdbc6.jar</systemPath>-->
+<!--        </dependency>-->
         <dependency>
-            <groupId>com.oracle.jdbc</groupId>
-            <artifactId>ojdbc6</artifactId>
-            <version>11.2.0.1.0</version>
-            <scope>system</scope>
-            <systemPath>${basedir}/lib/oracle/ojdbc6.jar</systemPath>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
         <dependency>
