--- a/spring-cloud-http/pom.xml
+++ b/spring-cloud-http/pom.xml
@@ -10,6 +10,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>spring-cloud-http</artifactId>
+    <properties>
+        <docker.image.prefix>docker</docker.image.prefix>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -26,21 +29,83 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.13</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.75</version>
+        </dependency>
     </dependencies>
 
     <build>
         <plugins>
             <plugin>
+                <!-- 可执行jar包                -->
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>2.4.3</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-deploy-plugin</artifactId>-->
+<!--                <version>${maven-deploy-plugin.version}</version>-->
+<!--                <configuration>-->
+<!--                    <skip>true</skip>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
+
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-deploy-plugin</artifactId>
-                <version>${maven-deploy-plugin.version}</version>
+                <groupId>com.spotify</groupId>
+                <artifactId>docker-maven-plugin</artifactId>
+                <version>1.2.0</version>
+                <!-- 绑定docker命令到 maven各个阶段 -->
+                <!-- 解释：可以把 docker 分为 build、tag、push，然后分别绑定 Maven 的 package、deploy 阶段 -->
+                <executions>
+                    <execution>
+                        <id>build-image</id>
+                        <!-- 这里将插件绑定在package这个操作上。用户只需执行mvn package ，就会自动执行mvn docker:build  相当于执行了mvn clean package docker:build -->
+                        <phase>package</phase>
+                        <goals>
+                            <goal>build</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
-                    <skip>true</skip>
+                    <!-- imageName镜像名称需匹配[a-z0-9-_.]，否则构建不会成功 -->
+                    <imageName>${docker.image.prefix}/${project.artifactId}</imageName>
+                    <!-- 指定Dockerfile文件路径，另外一种方式可直接在pom.xml配置对应的标签属性值 -->
+                    <dockerDirectory>${project.basedir}/src/main/docker</dockerDirectory>
+                    <!-- build时，指定–rm=true即build完成后删除中间容器 -->
+                    <rm>true</rm>
+                    <!--指定标签-->
+                    <imageTags>
+                        <imageTag>latest</imageTag>
+                    </imageTags>
+                    <!--指定远程 docker 服务器ip地址-->
+                    <dockerHost>http://172.20.16.53:2375</dockerHost>
+                    <!-- 这里是复制jar包到docker容器指定目录配置 -->
+                    <resources>
+                        <resource>
+                            <targetPath>/</targetPath>
+                            <!-- jar包所在的路径  此处配置的 即对应 target 目录 -->
+                            <directory>${project.build.directory}</directory>
+                            <!-- 需要包含的 jar包 ，这里对应的是 Dockerfile中添加的文件名　-->
+                            <include>${project.build.finalName}.jar</include>
+                        </resource>
+                    </resources>
                 </configuration>
             </plugin>
         </plugins>
