--- a/spring-cloud-http/src/main/docker/Dockerfile
+++ b/spring-cloud-http/src/main/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:8
+FROM java:alpine
 ADD ["spring-cloud-http-1.0-SNAPSHOT.jar","demo.jar"]
 EXPOSE :8080
 ENTRYPOINT ["java","-jar","/demo.jar"]
